KSENROLL-14780: Removing unneeded tab area, fixing layout for delete icon with buttons and changed spacing for breadcrumbs in Manage Registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@75951 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -524,11 +524,7 @@ fieldset .uif-smallActionButton {
   padding: 6px 0 1px 6px;
   background-color: #f1f1f1;
   margin-bottom: 10px;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
-    display: flex;
+  .ks-mixin--flex;
 
   .btn span {
     margin-left: 0;
