--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-manageRegistration.less
@@ -1,4 +1,8 @@
 .ks-ManageRegistration {
+  & #Uif-BreadcrumbWrapper {
+    height: 30px;
+  }
+
   &-show {
     margin-top: 1.7rem;
   }
@@ -16,16 +20,24 @@
 
 
 #addRegistrationWindowCollection .uif-tableCollectionLayout {
- &  > thead > tr > th,
- &  > tbody > tr > th,
- &  > tfoot > tr > th,
- &  > thead > tr > td,
- &  > tbody > tr > td,
- &  > tfoot > tr > td {
-    padding: 10px 5px 5px;
-  }
+   &  > thead > tr > th,
+   &  > tbody > tr > th,
+   &  > tfoot > tr > th,
+   &  > thead > tr > td,
+   &  > tbody > tr > td,
+   &  > tfoot > tr > td {
+      padding: 10px 5px 5px;
+    }
 }
 
-.icon-color {
+.ks-icon-color {
   color: @link-color !important;
+    &:hover,
+    &:focus {
+      color: @link-hover-color !important;
+    }
+}
+
+.ks-appointmentWindow-table tr td div {
+  .ks-mixin--flex;
 }
