--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/mixins.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/mixins.less
@@ -80,3 +80,11 @@
   .state-lozenge-base();
   background-color: @suspendedStateBackground;
 }
+
+.ks-mixin--flex {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;
+}
